--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=studybuddy
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student_companion
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=app_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
