--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,17 @@ spring.application.name=studybuddy
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student_companion
 spring.datasource.username=root
-spring.datasource.password=app_password
+spring.datasource.password=Svt130301
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+upload.directory=src/main/resources/static/uploads
+
+# Enable multipart file upload
+spring.servlet.multipart.enabled=true
+
+# Increase maximum file size
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
