--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=studybuddy
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student_companion
-spring.datasource.username=root
-spring.datasource.password=app_password
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/studybuddy_sme
+spring.datasource.username=${DB_USER:user_name}
+spring.datasource.password=${DB_PASSWORD:user_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
